DIAC-179 - Do not send email to 'No email address for decisions made without hearing' email (#1045)
* Added log

* Added log

* Email address validation

* Email address validation

* Email address validation

* Email address validation

* Email address validation

* Email address validation

* Email address validation

* Email address validation

* Email address validation