@@ -2,13 +2,17 @@ package uk.gov.hmcts.reform.iacasenotificationsapi.domain.service;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+
+import lombok.extern.slf4j.Slf4j;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.AsylumCase;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.entities.ccd.callback.Callback;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.BaseNotificationPersonalisation;
 import uk.gov.hmcts.reform.iacasenotificationsapi.domain.personalisation.EmailNotificationPersonalisation;
 import uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.clients.GovNotifyNotificationSender;
 
+import static uk.gov.hmcts.reform.iacasenotificationsapi.infrastructure.EmailAddressFinder.NO_EMAIL_ADDRESS_DECISION_WITHOUT_HEARING;
+
+@Slf4j
 public class EmailNotificationGenerator implements NotificationGenerator {
 
     protected final List<EmailNotificationPersonalisation> personalisationList;
@@ -41,18 +45,20 @@ public class EmailNotificationGenerator implements NotificationGenerator {
         final BaseNotificationPersonalisation personalisation,
         final AsylumCase asylumCase,
         final String referenceId,
-        final Callback<AsylumCase> callback) {
+        final Callback<AsylumCase> callback
+    ) {
 
         EmailNotificationPersonalisation emailNotificationPersonalisation = (EmailNotificationPersonalisation) personalisation;
         Set<String> subscriberEmails = emailNotificationPersonalisation.getRecipientsList(asylumCase);
 
         return subscriberEmails.stream()
-            .map(email ->
-                sendEmail(
-                    email,
-                    emailNotificationPersonalisation,
-                    referenceId,
-                    callback)).collect(Collectors.toList());
+            .filter(this::isValidEmailAddress)
+            .map(email -> sendEmail(
+                email,
+                emailNotificationPersonalisation,
+                referenceId,
+                callback)
+            ).toList();
     }
 
     protected String sendEmail(
@@ -73,4 +79,12 @@ public class EmailNotificationGenerator implements NotificationGenerator {
         );
     }
 
+    private boolean isValidEmailAddress(String email) {
+        if (email.equals(NO_EMAIL_ADDRESS_DECISION_WITHOUT_HEARING)) {
+            log.warn("Invalid email address {}", email);
+            return false;
+        }
+
+        return true;
+    }
 }
